[package]
name = "baur"
version = "0.1.2"
authors = ["BubbyRoosh"]
edition = "2018"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raur = "5.0.0"
dirs = "3.0.1"
git2 = "0.13.17"
rargsxd = "0.1.5"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
colorful = "0.2.1"
